--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -7,7 +7,8 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "machine_shape": "hm"
+      "machine_shape": "hm",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -19,6 +20,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/gist/chigozienri/7c802ba40842914914494dc9d763c1e8/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
