--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -585,7 +585,7 @@
         "    def train(i, save=True):\n",
         "        opt.zero_grad()\n",
         "        lossAll = ascend_txt(i, save=save)\n",
-        "        if i % args.display_freq == 0:\n",
+        "        if i % args.display_freq == 0 and save:\n",
         "            checkin(i, lossAll)\n",
         "        loss = sum(lossAll)\n",
         "        loss.backward()\n",
