--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -46,6 +46,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "wOSNC5SwHBry"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/gdrive')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "VA1PHoJrRiK9",
         "cellView": "form"
       },
@@ -89,8 +101,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wSfISAhyPmyp",
-        "cellView": "form"
+        "id": "wSfISAhyPmyp"
       },
       "source": [
         "# @title Library installation\n",
@@ -114,7 +125,7 @@
         " \n",
         "print(\"Installing Python video creation libraries...\")\n",
         "!pip install imageio-ffmpeg &> /dev/null\n",
-        "!mkdir steps\n",
+        "!mkdir gdrive/MyDrive/steps\n",
         "print(\"Installation finished.\")"
       ],
       "execution_count": null,
@@ -166,8 +177,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EXMSuW2EQWsd",
-        "cellView": "form"
+        "id": "EXMSuW2EQWsd"
       },
       "source": [
         "# @title Loading of libraries and definitions\n",
@@ -177,6 +187,7 @@
         "from pathlib import Path\n",
         "import sys\n",
         "import os\n",
+        "import cv2\n",
         " \n",
         "sys.path.append('./taming-transformers')\n",
         "from IPython import display\n",
@@ -400,14 +411,14 @@
       },
       "source": [
         "#@title Parameters\n",
-        "text_prompts = \"Moon\" #@param {type:\"string\"}\n",
-        "width =  480#@param {type:\"number\"}\n",
-        "height =  480#@param {type:\"number\"}\n",
+        "text_prompts = \"Topographic Map | Contour Lines\" #@param {type:\"string\"}\n",
+        "width =  800#@param {type:\"number\"}\n",
+        "height =  450#@param {type:\"number\"}\n",
         "model = \"vqgan_imagenet_f16_16384\" #@param [\"vqgan_imagenet_f16_16384\", \"vqgan_imagenet_f16_1024\", \"wikiart_1024\", \"wikiart_16384\", \"coco\", \"faceshq\", \"sflckr\"]\n",
         "interval =  50#@param {type:\"number\"}\n",
         "target_images = \"\"#@param {type:\"string\"}\n",
-        "seed = -1#@param {type:\"number\"}\n",
-        "max_iterations = 100#@param {type:\"number\"}\n",
+        "seed = 1#@param {type:\"number\"}\n",
+        "max_iterations = 200#@param {type:\"number\"}\n",
         "zoom = 1.02#@param {type:\"number\"}\n",
         "iterations_per_frame = 10#@param {type:\"number\"}\n",
         "\n",
@@ -450,8 +461,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g7EDme5RYCrt",
-        "cellView": "form"
+        "id": "g7EDme5RYCrt"
       },
       "source": [
         "#@title Actually do the run...\n",
@@ -482,21 +492,26 @@
         "z_max = model.quantize.embedding.weight.max(dim=0).values[None, :, None, None]\n",
         "\n",
         "for i in range(max_iterations):\n",
-        "    if i == 0 and not os.path.isfile(f'steps/{i:04d}.png'):\n",
+        "    if i == 0 and not os.path.isfile(f'gdrive/MyDrive/steps/{i:04d}.png'):\n",
         "        one_hot = F.one_hot(\n",
         "            torch.randint(n_toks, [toksY * toksX], device=device), n_toks\n",
         "        ).float()\n",
         "        z = one_hot @ model.quantize.embedding.weight\n",
         "        z = z.view([-1, toksY, toksX, e_dim]).permute(0, 3, 1, 2)\n",
         "    else:\n",
-        "        with Image.open(f'steps/{i:04d}.png') as img:\n",
-        "                w, h = img.size\n",
-        "                x, y = w // 2, h // 2\n",
-        "                zoom2 = zoom * 2\n",
-        "                img = img.crop((x - w / zoom2, y - h / zoom2, \n",
-        "                                x + w / zoom2, y + h / zoom2))\n",
-        "                img = img.resize((w, h), Image.LANCZOS).convert('RGB')\n",
-        "                z, *_ = model.encode(TF.to_tensor(img).to(device).unsqueeze(0) * 2 - 1)\n",
+        "       src = cv2.imread(f'gdrive/MyDrive/steps/{i:04d}.png')\n",
+        "        # srcTri = np.array( [[0, 0], [src.shape[1] - 1, 0], [0, src.shape[0] - 1]] ).astype(np.float32)\n",
+        "        # dstTri = np.array( [[0, src.shape[1]*0.33], [src.shape[1]*0.85, src.shape[0]*0.25], [src.shape[1]*0.15, src.shape[0]*0.7]] ).astype(np.float32)\n",
+        "        # warp_mat = cv2.getAffineTransform(srcTri, dstTri)\n",
+        "        # warp_dst = cv2.warpAffine(src, warp_mat, (src.shape[1], src.shape[0]))\n",
+        "        # Rotating the image after Warp\n",
+        "        warp_dst = src\n",
+        "        center = (3*warp_dst.shape[1]//4, warp_dst.shape[0]//4)\n",
+        "        angle = -5\n",
+        "        scale = 1.2\n",
+        "        rot_mat = cv2.getRotationMatrix2D( center, angle, scale )\n",
+        "        img = cv2.warpAffine(warp_dst, rot_mat, (warp_dst.shape[1], warp_dst.shape[0]), borderMode=cv2.BORDER_REPLICATE)\n",
+        "        z, *_ = model.encode(TF.to_tensor(img).to(device).unsqueeze(0) * 2 - 1)\n",
         "    i += 1\n",
         "\n",
         "    z_orig = z.clone()\n",
@@ -575,7 +590,7 @@
         "        img = np.array(out.mul(255).clamp(0, 255)[0].cpu().detach().numpy().astype(np.uint8))[:,:,:]\n",
         "        img = np.transpose(img, (1, 2, 0))\n",
         "        if save:\n",
-        "            filename = f\"steps/{i:04}.png\"\n",
+        "            filename = f\"gdrive/MyDrive/steps/{i:04}.png\"\n",
         "            print(filename)\n",
         "            imageio.imwrite(filename, np.array(img))\n",
         "            add_stegano_data(filename)\n",
@@ -666,7 +681,7 @@
         "id": "AvRmnKd0WexX"
       },
       "source": [
-        "# !rm steps/*"
+        "# !rm -r gdrive/MyDrive/steps/"
       ],
       "execution_count": null,
       "outputs": []
