--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -101,7 +101,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wSfISAhyPmyp"
+        "id": "wSfISAhyPmyp",
+        "cellView": "form"
       },
       "source": [
         "# @title Library installation\n",
@@ -177,7 +178,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EXMSuW2EQWsd"
+        "id": "EXMSuW2EQWsd",
+        "cellView": "form"
       },
       "source": [
         "# @title Loading of libraries and definitions\n",
@@ -406,8 +408,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZdlpRFL8UAlW",
-        "cellView": "form"
+        "id": "ZdlpRFL8UAlW"
       },
       "source": [
         "#@title Parameters\n",
@@ -415,12 +416,17 @@
         "width =  800#@param {type:\"number\"}\n",
         "height =  450#@param {type:\"number\"}\n",
         "model = \"vqgan_imagenet_f16_16384\" #@param [\"vqgan_imagenet_f16_16384\", \"vqgan_imagenet_f16_1024\", \"wikiart_1024\", \"wikiart_16384\", \"coco\", \"faceshq\", \"sflckr\"]\n",
-        "interval =  50#@param {type:\"number\"}\n",
+        "interval =  1#@param {type:\"number\"}\n",
+        "initial_image = \"\"#@param {type:\"string\"}\n",
         "target_images = \"\"#@param {type:\"string\"}\n",
         "seed = 1#@param {type:\"number\"}\n",
         "max_iterations = 200#@param {type:\"number\"}\n",
-        "zoom = 1.02#@param {type:\"number\"}\n",
+        "angle = -5#@param {type:\"number\"}\n",
+        "zoom = 1.2#@param {type:\"number\"}\n",
+        "translation_x = 40#@param {type:\"number\"}\n",
+        "translation_y = 10#@param {type:\"number\"}\n",
         "iterations_per_frame = 10#@param {type:\"number\"}\n",
+        "save_all_iterations = True#@param {type:\"boolean\"}\n",
         "\n",
         "model_names={\"vqgan_imagenet_f16_16384\": 'ImageNet 16384',\"vqgan_imagenet_f16_1024\":\"ImageNet 1024\", \n",
         "                 \"wikiart_1024\":\"WikiArt 1024\", \"wikiart_16384\":\"WikiArt 16384\", \"coco\":\"COCO-Stuff\", \"faceshq\":\"FacesHQ\", \"sflckr\":\"S-FLCKR\"}\n",
@@ -461,6 +467,30 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "ksH-eM4pZBdP"
+      },
+      "source": [
+        "!rm -r gdrive/MyDrive/steps\n",
+        "!mkdir gdrive/MyDrive/steps"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-qAWbJ-_ctkl"
+      },
+      "source": [
+        "filename = f\"{'_'.join(text_prompts).replace(' ', '')}.mp4\"\n",
+        "filepath = 'gdrive/MyDrive/' + filename"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "g7EDme5RYCrt"
       },
       "source": [
@@ -492,26 +522,39 @@
         "z_max = model.quantize.embedding.weight.max(dim=0).values[None, :, None, None]\n",
         "\n",
         "for i in range(max_iterations):\n",
-        "    if i == 0 and not os.path.isfile(f'gdrive/MyDrive/steps/{i:04d}.png'):\n",
+        "    if i == 0 and initial_image != \"\":\n",
+        "        img_0 = cv2.imread(initial_image)\n",
+        "        z, *_ = model.encode(TF.to_tensor(img_0).to(device).unsqueeze(0) * 2 - 1)\n",
+        "    elif i == 0 and not os.path.isfile(f'gdrive/MyDrive/steps/{i:04d}.png'):\n",
         "        one_hot = F.one_hot(\n",
         "            torch.randint(n_toks, [toksY * toksX], device=device), n_toks\n",
         "        ).float()\n",
         "        z = one_hot @ model.quantize.embedding.weight\n",
         "        z = z.view([-1, toksY, toksX, e_dim]).permute(0, 3, 1, 2)\n",
         "    else:\n",
-        "       src = cv2.imread(f'gdrive/MyDrive/steps/{i:04d}.png')\n",
-        "        # srcTri = np.array( [[0, 0], [src.shape[1] - 1, 0], [0, src.shape[0] - 1]] ).astype(np.float32)\n",
-        "        # dstTri = np.array( [[0, src.shape[1]*0.33], [src.shape[1]*0.85, src.shape[0]*0.25], [src.shape[1]*0.15, src.shape[0]*0.7]] ).astype(np.float32)\n",
-        "        # warp_mat = cv2.getAffineTransform(srcTri, dstTri)\n",
-        "        # warp_dst = cv2.warpAffine(src, warp_mat, (src.shape[1], src.shape[0]))\n",
-        "        # Rotating the image after Warp\n",
-        "        warp_dst = src\n",
-        "        center = (3*warp_dst.shape[1]//4, warp_dst.shape[0]//4)\n",
-        "        angle = -5\n",
-        "        scale = 1.2\n",
-        "        rot_mat = cv2.getRotationMatrix2D( center, angle, scale )\n",
-        "        img = cv2.warpAffine(warp_dst, rot_mat, (warp_dst.shape[1], warp_dst.shape[0]), borderMode=cv2.BORDER_REPLICATE)\n",
-        "        z, *_ = model.encode(TF.to_tensor(img).to(device).unsqueeze(0) * 2 - 1)\n",
+        "        if save_all_iterations:\n",
+        "            img_0 = cv2.imread(\n",
+        "                f'gdrive/MyDrive/steps/{i:04d}_{iterations_per_frame}.png')\n",
+        "        else:\n",
+        "            img_0 = cv2.imread(f'gdrive/MyDrive/steps/{i:04d}.png')\n",
+        "        center = (1*img_0.shape[1]//2, 1*img_0.shape[0]//2)\n",
+        "        trans_mat = np.float32(\n",
+        "            [[1, 0, translation_x],\n",
+        "             [0, 1, translation_y]]\n",
+        "        )\n",
+        "        rot_mat = cv2.getRotationMatrix2D( center, angle, zoom )\n",
+        "\n",
+        "        trans_mat = np.vstack([trans_mat, [0,0,1]])\n",
+        "        rot_mat = np.vstack([rot_mat, [0,0,1]])\n",
+        "        transformation_matrix = np.matmul(rot_mat, trans_mat)\n",
+        "\n",
+        "        img_0 = cv2.warpPerspective(\n",
+        "            img_0,\n",
+        "            transformation_matrix,\n",
+        "            (img_0.shape[1], img_0.shape[0]),\n",
+        "            borderMode=cv2.BORDER_REPLICATE\n",
+        "        )\n",
+        "        z, *_ = model.encode(TF.to_tensor(img_0).to(device).unsqueeze(0) * 2 - 1)\n",
         "    i += 1\n",
         "\n",
         "    z_orig = z.clone()\n",
@@ -576,7 +619,14 @@
         "        add_xmp_data('progress.png')\n",
         "        display.display(display.Image('progress.png'))\n",
         "\n",
-        "    def ascend_txt(i, save=True):\n",
+        "    def save_output(i, img, suffix=None):\n",
+        "        filename = \\\n",
+        "            f\"gdrive/MyDrive/steps/{i:04}{'_' + suffix if suffix else ''}.png\"\n",
+        "        imageio.imwrite(filename, np.array(img))\n",
+        "        add_stegano_data(filename)\n",
+        "        add_xmp_data(filename)\n",
+        "\n",
+        "    def ascend_txt(i, save=True, suffix=None):\n",
         "        out = synth(z)\n",
         "        iii = perceptor.encode_image(normalize(make_cutouts(out))).float()\n",
         "\n",
@@ -590,16 +640,12 @@
         "        img = np.array(out.mul(255).clamp(0, 255)[0].cpu().detach().numpy().astype(np.uint8))[:,:,:]\n",
         "        img = np.transpose(img, (1, 2, 0))\n",
         "        if save:\n",
-        "            filename = f\"gdrive/MyDrive/steps/{i:04}.png\"\n",
-        "            print(filename)\n",
-        "            imageio.imwrite(filename, np.array(img))\n",
-        "            add_stegano_data(filename)\n",
-        "            add_xmp_data(filename)\n",
+        "            save_output(i, img, suffix=suffix)\n",
         "        return result\n",
         "\n",
-        "    def train(i, save=True):\n",
+        "    def train(i, save=True, suffix=None):\n",
         "        opt.zero_grad()\n",
-        "        lossAll = ascend_txt(i, save=save)\n",
+        "        lossAll = ascend_txt(i, save=save, suffix=suffix)\n",
         "        if i % args.display_freq == 0 and save:\n",
         "            checkin(i, lossAll)\n",
         "        loss = sum(lossAll)\n",
@@ -608,18 +654,18 @@
         "        with torch.no_grad():\n",
         "            z.copy_(z.maximum(z_min).minimum(z_max))\n",
         "\n",
-        "    try:\n",
-        "        with tqdm() as pbar:\n",
-        "            j = 0\n",
-        "            while True:\n",
-        "                if j == iterations_per_frame:\n",
-        "                    train(i, save=True)\n",
-        "                    break\n",
-        "                train(i, save=False)\n",
-        "                j += 1\n",
-        "                pbar.update()\n",
-        "    except KeyboardInterrupt:\n",
-        "        pass"
+        "    with tqdm() as pbar:\n",
+        "        if iterations_per_frame == 0:\n",
+        "            save_output(i, img_0)\n",
+        "        j = 1\n",
+        "        while True:\n",
+        "            suffix = (str(j) if save_all_iterations else None)\n",
+        "            if j >= iterations_per_frame:\n",
+        "                train(i, save=True, suffix=suffix)\n",
+        "                break\n",
+        "            train(i, save=True, suffix=suffix)\n",
+        "            j += 1\n",
+        "            pbar.update()"
       ],
       "execution_count": null,
       "outputs": []
@@ -638,8 +684,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mFo5vz0UYBrF",
-        "cellView": "form"
+        "id": "mFo5vz0UYBrF"
       },
       "source": [
         "# @title Create video\n",
@@ -663,7 +708,7 @@
         "fps = np.clip(total_frames/length,min_fps,max_fps)\n",
         "\n",
         "from subprocess import Popen, PIPE\n",
-        "p = Popen(['ffmpeg', '-y', '-f', 'image2pipe', '-vcodec', 'png', '-r', str(fps), '-i', '-', '-vcodec', 'libx264', '-r', str(fps), '-pix_fmt', 'yuv420p', '-crf', '17', '-preset', 'veryslow', 'video.mp4'], stdin=PIPE)\n",
+        "p = Popen(['ffmpeg', '-y', '-f', 'image2pipe', '-vcodec', 'png', '-r', str(fps), '-i', '-', '-vcodec', 'libx264', '-r', str(fps), '-pix_fmt', 'yuv420p', '-crf', '17', '-preset', 'veryslow', filepath], stdin=PIPE)\n",
         "for im in tqdm(frames):\n",
         "    im.save(p.stdin, 'PNG')\n",
         "p.stdin.close()\n",
@@ -678,24 +723,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AvRmnKd0WexX"
-      },
-      "source": [
-        "# !rm -r gdrive/MyDrive/steps/"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "E8lvN6b0mb-b",
-        "cellView": "form"
+        "id": "E8lvN6b0mb-b"
       },
       "source": [
         "# @title See video in the browser\n",
         "# @markdown This process may take a little longer. If you don't want to wait, download it by executing the next cell instead of using this cell.\n",
-        "mp4 = open('video.mp4','rb').read()\n",
+        "mp4 = open(filepath,'rb').read()\n",
         "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
         "display.HTML(\"\"\"\n",
         "<video width=400 controls>\n",
@@ -709,13 +742,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y0e8pHyJmi7s",
-        "cellView": "form"
+        "id": "Y0e8pHyJmi7s"
       },
       "source": [
         "# @title Download video\n",
         "from google.colab import files\n",
-        "files.download(\"video.mp4\")"
+        "files.download(filepath)"
       ],
       "execution_count": null,
       "outputs": []
