--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -44,13 +44,46 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N3vV_Mq292w-"
+      },
+      "source": [
+        "# Load Google Drive\n",
+        "\n",
+        "Long-running colab notebooks might halt, and discard all progress. For this reason, it's useful (although optional) to save the images as they are produced in your personal google drive. Run the cell below to load google drive, click the link, sign in, paste the code generated into the prompt, and press enter."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "wOSNC5SwHBry"
       },
       "source": [
         "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')"
+        "drive.mount('/content/gdrive')\n",
+        "\n",
+        "working_dir = '/content/gdrive/MyDrive/vqgan'"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "M-_wFuRq-zPa"
+      },
+      "source": [
+        "If you choose not to use google drive, uncomment the cell below and run it instead."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fsubmNPc-pD0"
+      },
+      "source": [
+        "# working_dir = '/content'"
       ],
       "execution_count": null,
       "outputs": []
@@ -101,8 +134,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wSfISAhyPmyp",
-        "cellView": "form"
+        "id": "wSfISAhyPmyp"
       },
       "source": [
         "# @title Library installation\n",
@@ -126,7 +158,7 @@
         " \n",
         "print(\"Installing Python video creation libraries...\")\n",
         "!pip install imageio-ffmpeg &> /dev/null\n",
-        "!mkdir gdrive/MyDrive/steps\n",
+        "!mkdir {f'{working_dir}/steps'}\n",
         "print(\"Installation finished.\")"
       ],
       "execution_count": null,
@@ -384,11 +416,13 @@
       },
       "source": [
         "## Instructions:\n",
-        "Experimental zoom feature\n",
+        "Transformations (zoom, rotation, and translation)\n",
         "\n",
-        "On each frame, the network restarts, is fed a version of the output zoomed in by `zoom` as the initial image, and runs `iterations_per_frame` iterations of the VQGAN+CLIP method.\n",
+        "On each frame, the network restarts, is fed a version of the output zoomed in by `zoom` as the initial image, rotated clockwise by `angle` degrees, translated horizontally by `translation_x` pixels, and translated vertically by `translation_y` pixels. Then it runs `iterations_per_frame` iterations of the VQGAN+CLIP method. 0 `iterations_per_frame` is supported, to help test out the transformations without changing the image.\n",
         "\n",
-        "For `iterations_per_frame = 1` (recommended for trippy effects), the resulting images will not have much to do with the prompts, but at least one prompt is still required.\n",
+        "For `iterations_per_frame = 1` (recommended for more abstract effects), the resulting images will not have much to do with the prompts, but at least one prompt is still required.\n",
+        "\n",
+        "In normal use, only the last iteration of each frame will be saved, but for trouble-shooting you can set `save_all_iterations` to True, and every iteration of each frame will be saved.\n",
         "\n",
         "----------------\n",
         "\n",
@@ -420,13 +454,13 @@
         "initial_image = \"\"#@param {type:\"string\"}\n",
         "target_images = \"\"#@param {type:\"string\"}\n",
         "seed = 1#@param {type:\"number\"}\n",
-        "max_iterations = 200#@param {type:\"number\"}\n",
+        "max_iterations = 1000#@param {type:\"number\"}\n",
         "angle = -5#@param {type:\"number\"}\n",
         "zoom = 1.2#@param {type:\"number\"}\n",
         "translation_x = 40#@param {type:\"number\"}\n",
         "translation_y = 10#@param {type:\"number\"}\n",
         "iterations_per_frame = 10#@param {type:\"number\"}\n",
-        "save_all_iterations = True#@param {type:\"boolean\"}\n",
+        "save_all_iterations = False#@param {type:\"boolean\"}\n",
         "\n",
         "model_names={\"vqgan_imagenet_f16_16384\": 'ImageNet 16384',\"vqgan_imagenet_f16_1024\":\"ImageNet 1024\", \n",
         "                 \"wikiart_1024\":\"WikiArt 1024\", \"wikiart_16384\":\"WikiArt 16384\", \"coco\":\"COCO-Stuff\", \"faceshq\":\"FacesHQ\", \"sflckr\":\"S-FLCKR\"}\n",
@@ -465,13 +499,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TV_lYFXeAulw"
+      },
+      "source": [
+        "The following cell deletes any frames already in the steps directory. Make sure you have saved any frames you want to keep from previous runs"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ksH-eM4pZBdP"
       },
       "source": [
-        "!rm -r gdrive/MyDrive/steps\n",
-        "!mkdir gdrive/MyDrive/steps"
+        "!rm -r {f'{working_dir}/steps'}\n",
+        "!mkdir {f'{working_dir}/steps'}"
       ],
       "execution_count": null,
       "outputs": []
@@ -525,7 +568,7 @@
         "    if i == 0 and initial_image != \"\":\n",
         "        img_0 = cv2.imread(initial_image)\n",
         "        z, *_ = model.encode(TF.to_tensor(img_0).to(device).unsqueeze(0) * 2 - 1)\n",
-        "    elif i == 0 and not os.path.isfile(f'gdrive/MyDrive/steps/{i:04d}.png'):\n",
+        "    elif i == 0 and not os.path.isfile(f'{working_dir}/steps/{i:04d}.png'):\n",
         "        one_hot = F.one_hot(\n",
         "            torch.randint(n_toks, [toksY * toksX], device=device), n_toks\n",
         "        ).float()\n",
@@ -534,9 +577,9 @@
         "    else:\n",
         "        if save_all_iterations:\n",
         "            img_0 = cv2.imread(\n",
-        "                f'gdrive/MyDrive/steps/{i:04d}_{iterations_per_frame}.png')\n",
+        "                f'{working_dir}/steps/{i:04d}_{iterations_per_frame}.png')\n",
         "        else:\n",
-        "            img_0 = cv2.imread(f'gdrive/MyDrive/steps/{i:04d}.png')\n",
+        "            img_0 = cv2.imread(f'{working_dir}/steps/{i:04d}.png')\n",
         "        center = (1*img_0.shape[1]//2, 1*img_0.shape[0]//2)\n",
         "        trans_mat = np.float32(\n",
         "            [[1, 0, translation_x],\n",
@@ -688,27 +731,23 @@
       },
       "source": [
         "# @title Create video\n",
-        "init_frame = 1  # This is the frame where the video will start\n",
-        "last_frame = i  # You can change i to the number of the last frame you want to generate. It will raise an error if that number of frames does not exist.\n",
         "\n",
-        "min_fps = 10\n",
-        "max_fps = 30\n",
-        "\n",
-        "total_frames = last_frame-init_frame\n",
-        "\n",
-        "length = 15  # Length of the video in seconds\n",
+        "init_frame = 1#@param {type:\"number\"} This is the frame where the video will start\n",
+        "last_frame = i#@param {type:\"number\"} You can change i to the number of the last frame you want to generate. It will raise an error if that number of frames does not exist.\n",
+        "fps = 12#@param {type:\"number\"}\n",
         "\n",
         "frames = []\n",
         "tqdm.write('Generating video...')\n",
         "for i in range(init_frame,last_frame): #\n",
-        "    filename = f\"steps/{i:04}.png\"\n",
+        "    filename = f\"{working_dir}/steps/{i:04}.png\"\n",
         "    frames.append(Image.open(filename))\n",
         "\n",
-        "#fps = last_frame/10\n",
-        "fps = np.clip(total_frames/length,min_fps,max_fps)\n",
-        "\n",
         "from subprocess import Popen, PIPE\n",
-        "p = Popen(['ffmpeg', '-y', '-f', 'image2pipe', '-vcodec', 'png', '-r', str(fps), '-i', '-', '-vcodec', 'libx264', '-r', str(fps), '-pix_fmt', 'yuv420p', '-crf', '17', '-preset', 'veryslow', filepath], stdin=PIPE)\n",
+        "p = Popen(\n",
+        "    ['ffmpeg', '-y', '-f', 'image2pipe', '-vcodec', 'png', '-r', str(fps), '-i',\n",
+        "     '-', '-vcodec', 'libx264', '-r', str(fps), '-pix_fmt', 'yuv420p', '-crf', \n",
+        "     '17', '-preset', 'veryslow', filepath],\n",
+        "    stdin=PIPE)\n",
         "for im in tqdm(frames):\n",
         "    im.save(p.stdin, 'PNG')\n",
         "p.stdin.close()\n",
