--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -526,7 +526,7 @@
       },
       "source": [
         "filename = f\"{'_'.join(text_prompts).replace(' ', '')}.mp4\"\n",
-        "filepath = 'gdrive/MyDrive/' + filename"
+        "filepath = f'{working_dir}/{filename}'"
       ],
       "execution_count": null,
       "outputs": []
@@ -664,7 +664,7 @@
         "\n",
         "    def save_output(i, img, suffix=None):\n",
         "        filename = \\\n",
-        "            f\"gdrive/MyDrive/steps/{i:04}{'_' + suffix if suffix else ''}.png\"\n",
+        "            f\"{working_dir}/steps/{i:04}{'_' + suffix if suffix else ''}.png\"\n",
         "        imageio.imwrite(filename, np.array(img))\n",
         "        add_stegano_data(filename)\n",
         "        add_xmp_data(filename)\n",
