--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -46,6 +46,25 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "poDdjU3SDtF2"
+      },
+      "source": [
+        "# How to use this notebook\n",
+        "\n",
+        "This is an example of a Jupyter Notebook, running in Google Colab\n",
+        "\n",
+        "It runs Python code in your browser. It's not hard to use, even if you haven't run code before.\n",
+        "\n",
+        "First, in the menu bar, click Runtime>Change Runtime Type, and ensure that under \"Hardware Accelerator\" it says \"GPU\". If not, choose \"GPU\" from the drop-down menu, and click Save.\n",
+        "\n",
+        "Then, run each of the cells in the notebook, one by one. Make sure to run all of them in order! Click in the cell, and press Shift-Enter on your keyboard. This will run the code in the cell, and then move to the next cell.\n",
+        "\n",
+        "Follow the instructions in each cell, and you'll have an AI image in no time!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "N3vV_Mq292w-"
       },
       "source": [
@@ -158,7 +177,8 @@
         " \n",
         "print(\"Installing Python video creation libraries...\")\n",
         "!pip install imageio-ffmpeg &> /dev/null\n",
-        "!mkdir {f'{working_dir}/steps'}\n",
+        "path = f'{working_dir}/steps'\n",
+        "!mkdir --parents {path}\n",
         "print(\"Installation finished.\")"
       ],
       "execution_count": null,
@@ -415,7 +435,7 @@
         "id": "1tthw0YaispD"
       },
       "source": [
-        "## Instructions:\n",
+        "## Instructions for setting parameters:\n",
         "Transformations (zoom, rotation, and translation)\n",
         "\n",
         "On each frame, the network restarts, is fed a version of the output zoomed in by `zoom` as the initial image, rotated clockwise by `angle` degrees, translated horizontally by `translation_x` pixels, and translated vertically by `translation_y` pixels. Then it runs `iterations_per_frame` iterations of the VQGAN+CLIP method. 0 `iterations_per_frame` is supported, to help test out the transformations without changing the image.\n",
@@ -454,7 +474,7 @@
         "initial_image = \"\"#@param {type:\"string\"}\n",
         "target_images = \"\"#@param {type:\"string\"}\n",
         "seed = 1#@param {type:\"number\"}\n",
-        "max_iterations = 1000#@param {type:\"number\"}\n",
+        "max_frames = 1000#@param {type:\"number\"}\n",
         "angle = -5#@param {type:\"number\"}\n",
         "zoom = 1.2#@param {type:\"number\"}\n",
         "translation_x = 40#@param {type:\"number\"}\n",
@@ -513,8 +533,9 @@
         "id": "ksH-eM4pZBdP"
       },
       "source": [
-        "!rm -r {f'{working_dir}/steps'}\n",
-        "!mkdir {f'{working_dir}/steps'}"
+        "path = f'{working_dir}/steps'\n",
+        "!rm -r {path}\n",
+        "!mkdir --parents {path}"
       ],
       "execution_count": null,
       "outputs": []
@@ -564,7 +585,7 @@
         "z_min = model.quantize.embedding.weight.min(dim=0).values[None, :, None, None]\n",
         "z_max = model.quantize.embedding.weight.max(dim=0).values[None, :, None, None]\n",
         "\n",
-        "for i in range(max_iterations):\n",
+        "for i in range(max_frames):\n",
         "    if i == 0 and initial_image != \"\":\n",
         "        img_0 = cv2.imread(initial_image)\n",
         "        z, *_ = model.encode(TF.to_tensor(img_0).to(device).unsqueeze(0) * 2 - 1)\n",
@@ -706,7 +727,10 @@
         "            if j >= iterations_per_frame:\n",
         "                train(i, save=True, suffix=suffix)\n",
         "                break\n",
-        "            train(i, save=True, suffix=suffix)\n",
+        "            if save_all_iterations:\n",
+        "                train(i, save=True, suffix=suffix)\n",
+        "            else:\n",
+        "                train(i, save=False, suffix=suffix)\n",
         "            j += 1\n",
         "            pbar.update()"
       ],
@@ -727,7 +751,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mFo5vz0UYBrF"
+        "id": "mFo5vz0UYBrF",
+        "cellView": "form"
       },
       "source": [
         "# @title Create video\n",
@@ -762,7 +787,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "E8lvN6b0mb-b"
+        "id": "E8lvN6b0mb-b",
+        "cellView": "form"
       },
       "source": [
         "# @title See video in the browser\n",
@@ -781,7 +807,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y0e8pHyJmi7s"
+        "id": "Y0e8pHyJmi7s",
+        "cellView": "form"
       },
       "source": [
         "# @title Download video\n",
