--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -153,7 +153,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wSfISAhyPmyp"
+        "id": "wSfISAhyPmyp",
+        "cellView": "form"
       },
       "source": [
         "# @title Library installation\n",
@@ -462,7 +463,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZdlpRFL8UAlW"
+        "id": "ZdlpRFL8UAlW",
+        "cellView": "form"
       },
       "source": [
         "#@title Parameters\n",
@@ -555,7 +557,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g7EDme5RYCrt"
+        "id": "g7EDme5RYCrt",
+        "cellView": "form"
       },
       "source": [
         "#@title Actually do the run...\n",
