--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -557,11 +557,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g7EDme5RYCrt",
-        "cellView": "form"
+        "id": "g7EDme5RYCrt"
       },
       "source": [
         "#@title Actually do the run...\n",
+        "\n",
+        "# Delete memory from previous runs\n",
+        "try:\n",
+        "    del device\n",
+        "    del model\n",
+        "    del perceptor\n",
+        "    torch.cuda.empty_cache()\n",
+        "except:\n",
+        "    pass\n",
+        "\n",
         "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
         "print('Using device:', device)\n",
         "if text_prompts:\n",
