--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -557,7 +557,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g7EDme5RYCrt"
+        "id": "g7EDme5RYCrt",
+        "cellView": "form"
       },
       "source": [
         "#@title Actually do the run...\n",
