--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -613,7 +613,10 @@
         "            img_0 = cv2.imread(\n",
         "                f'{working_dir}/steps/{i:04d}_{iterations_per_frame}.png')\n",
         "        else:\n",
-        "            img_0 = cv2.imread(f'{working_dir}/steps/{i:04d}.png')\n",
+        "            # Hack to prevent colour inversion on every frame\n",
+        "            img_temp = cv2.imread(f'{working_dir}/steps/{i:04d}.png')\n",
+        "            imageio.imwrite('inverted_temp.png', img_temp)\n",
+        "            img_0 = cv2.imread('inverted_temp.png')\n",
         "        center = (1*img_0.shape[1]//2, 1*img_0.shape[0]//2)\n",
         "        trans_mat = np.float32(\n",
         "            [[1, 0, translation_x],\n",
@@ -629,7 +632,7 @@
         "            img_0,\n",
         "            transformation_matrix,\n",
         "            (img_0.shape[1], img_0.shape[0]),\n",
-        "            borderMode=cv2.BORDER_REPLICATE\n",
+        "            borderMode=cv2.BORDER_WRAP\n",
         "        )\n",
         "        z, *_ = model.encode(TF.to_tensor(img_0).to(device).unsqueeze(0) * 2 - 1)\n",
         "    i += 1\n",
