--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -437,6 +437,27 @@
       },
       "source": [
         "## Instructions for setting parameters:\n",
+        "\n",
+        "| Parameter  |  Usage |\n",
+        "|---|---|\n",
+        "|  `text_prompts` |  Text prompts, separated by \"\\|\" |\n",
+        "| `width` | Width of the output, in pixels |\n",
+        "| `height` | Height of the output, in pixels |\n",
+        "| `model` | Choice of model, must be downloaded above |\n",
+        "| `interval` | How often to display the frame in the notebook (doesn't affect the actual output) |\n",
+        "| `initial_image` | Image to start with (relative path to file) |\n",
+        "| `target_images` | Image prompts to target, separated by \"|\" (relative path to files) |\n",
+        "| `seed` | Random seed, if set to a positive integer the run will be repeatable (get the same output for the same input each time, if set to -1 a random seed will be used. |\n",
+        "| `max_frames` | Number of frames for the animation |\n",
+        "| `angle` | Angle in degrees to rotate clockwise between each frame |\n",
+        "| `zoom` | Factor to zoom in each frame, 1 is no zoom, less than 1 is zoom out, more than 1 is zoom in (negative is uninteresting, just adds an extra 180 rotation beyond that in angle) |\n",
+        "| `translation_x` | Number of pixels to shift right each frame |\n",
+        "| `translation_y` | Number of pixels to shift down each frame |\n",
+        "| `iterations_per_frame` | Number of times to run the VQGAN+CLIP method each frame |\n",
+        "| `save_all_iterations` | Debugging, set False in normal operation |\n",
+        "\n",
+        "---------\n",
+        "\n",
         "Transformations (zoom, rotation, and translation)\n",
         "\n",
         "On each frame, the network restarts, is fed a version of the output zoomed in by `zoom` as the initial image, rotated clockwise by `angle` degrees, translated horizontally by `translation_x` pixels, and translated vertically by `translation_y` pixels. Then it runs `iterations_per_frame` iterations of the VQGAN+CLIP method. 0 `iterations_per_frame` is supported, to help test out the transformations without changing the image.\n",
