--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -585,10 +585,19 @@
         "#@title Actually do the run...\n",
         "\n",
         "# Delete memory from previous runs\n",
+        "for var in ['device', 'model', 'perceptor', 'z']:\n",
+        "  try:\n",
+        "      del globals()[var]\n",
+        "  except:\n",
+        "      pass\n",
+        "\n",
         "try:\n",
-        "    del device\n",
-        "    del model\n",
-        "    del perceptor\n",
+        "    import gc\n",
+        "    gc.collect()\n",
+        "except:\n",
+        "    pass\n",
+        "\n",
+        "try:\n",
         "    torch.cuda.empty_cache()\n",
         "except:\n",
         "    pass\n",
@@ -653,7 +662,7 @@
         "            img_0,\n",
         "            transformation_matrix,\n",
         "            (img_0.shape[1], img_0.shape[0]),\n",
-        "            borderMode=cv2.BORDER_WRAP\n",
+        "            borderMode=cv2.BORDER_REPLICATE\n",
         "        )\n",
         "        z, *_ = model.encode(TF.to_tensor(img_0).to(device).unsqueeze(0) * 2 - 1)\n",
         "    i += 1\n",
